--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 
 services:
-  web_wsp_yb:
+  yt_wsp:
     build: .
     # ports:
     #   - "5000:5000"
@@ -13,7 +13,7 @@ services:
     environment:
       - SERVER_HOST=mysqldb_mariadb_1
 
-  nginx_wsp_3:
+  yt_wsp_nginx:
     image: nginx:latest
     restart: always
     ports:
